# CodeScoutAI

./: .gitignore  .pre-commit-config.yaml  CodeScoutAI.code-workspace  LICENSE  README.md  Taskfile.yml  mypy.ini  ruff.toml
cli/: Taskfile.yml  pyproject.toml
code_scout/: .env.example  Taskfile.yml  architecture_design.md  diff.txt  langchain_integration_plan.md  mypy.ini  pyproject.toml  symbol_search_architecture.md
code_scout/docs/: code_excerpts_feature.md
code_scout/src/cli/: __init__.py  cli_config.py  cli_context.py  cli_formatter.py  cli_options.py  cli_utils.py  code_scout_context.py  git_cli.py  github_cli.py  index_cli.py  main.py
code_scout/src/core/: __init__.py
code_scout/src/core/code_index/: code_index_config.py  code_index_extractor.py  code_index_manager.py  code_index_repository.py  models.py  queries.py
code_scout/src/core/diff_providers/: git_diff_provider.py  github_diff_provider.py  local_git_diff_provider.py
code_scout/src/core/interfaces/: diff_provider.py  langchain_review_tool.py  llm_provider.py  review_chain.py  review_formatter.py  review_tool.py
code_scout/src/core/llm_providers/: default_llm_provider.py  langchain_provider.py
code_scout/src/core/models/: code_diff.py  diff_hunk.py  llm_wrapper.py  parsed_diff.py  review_command_args.py  review_config.py  review_finding.py  review_result.py
code_scout/src/core/registry/: component_registry.py
code_scout/src/core/review_chains/: basic_review_chain.py
code_scout/src/core/services/: code_review_agent.py  code_review_service.py  github_service.py
code_scout/src/core/tools/: file_content_tool.py  search_code_index_tool.py
code_scout/src/core/utils/: code_excerpt_extractor.py  diff_parser.py  llm_utils.py
code_scout/src/plugins/: __init__.py
code_scout/tests/: Taskfile.yml  test_cli_options.py  test_code_excerpt_extractor.py  test_code_index_extractor.py  test_diff_parser.py  test_diff_providers.py  test_git_diff_provider.py  test_github_diff_provider.py  test_tool_integration.py
code_scout/tests/test_source_files/: dart_example.dart  dart_example_.json  javascript_example.js  javascript_example.json  javascript_example_.json  python_example.py  python_example_.json
core/: README.md  Taskfile.yml  pyproject.toml
core/src/: __init__.py
plugins/: Taskfile.yml  pyproject.toml
tests/: pyproject.toml
