[tool.poetry]
name = "code_scout"
version = "0.1.0"
description = "AI Code Reviewer"
authors = ["Andrzej Chmielewski <andrzejchm@gmail.com>"]
license = "Business Source License 1.1"
packages = [
    { include = "core", from = "src" },
    { include = "cli", from = "src" },
    { include = "plugins", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
click = ">=8.2.1,<9.0.0"
rich = ">=14.0.0,<15.0.0"
langchain = ">=0.3.25,<0.4.0"
pydantic = ">=2.11.5,<3.0.0"
gitpython = ">=3.1.44,<4.0.0"
unidiff = ">=0.7.5,<0.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"
pytest = ">=8.3.5,<9.0.0"
pytest-cov = ">=6.1.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
explicit_package_bases = false
plugins = ['pydantic.mypy']
