[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core functionality for AI Code Reviewer"
authors = ["Andrzej Chmielewski <andrzejchm@gmail.com>"]
license = "Business Source License 1.1"
readme = "README.md"
packages = [{ include = "core", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
langchain = ">=0.3.25,<0.4.0"
pydantic = ">=2.11.5,<3.0.0"
gitpython = ">=3.1.44,<4.0.0"
unidiff = ">=0.7.5,<0.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
